<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".activity.ContactActivity"
                                             tools:layout_editor_absoluteY="25dp"
                                             tools:layout_editor_absoluteX="0dp">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:id="@+id/action_bar_id"
                  android:layout_width="0dp"
                  android:layout_height="72dp"
                  android:orientation="horizontal"
                  android:background="@color/colorBlue"
                  tools:layout_editor_absoluteY="0dp"
                  tools:layout_editor_absoluteX="0dp"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent">



        <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
                   xmlns:tools="http://schemas.android.com/tools"
                   android:id="@+id/title_bar_logo"
                   android:layout_width="0dp"
                   android:layout_height="56dp"
                   android:layout_marginLeft="16dp"
                   android:layout_marginRight="16dp"
                   android:layout_marginTop="8dp"
                   android:background="@drawable/sindikat_app_logo"
                   android:orientation="horizontal"
                   android:layout_weight="1">
        </ImageView>
    </LinearLayout>

    <TextView
            android:id="@+id/address_street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/street"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="163dp"
            tools:layout_editor_absoluteX="100dp"
            app:layout_constraintStart_toStartOf="@+id/address_city"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/address_city" />


    <TextView
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="374dp"
            tools:layout_editor_absoluteX="69dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="34dp"
            app:layout_constraintTop_toBottomOf="@+id/phone_2"
            app:layout_constraintEnd_toEndOf="parent"
            android:autoLink="email"/>

    <TextView
            android:id="@+id/developed_by_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developed_by_text"
            tools:layout_editor_absoluteY="497dp"
            tools:layout_editor_absoluteX="150dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/developed_by_link" />

    <TextView
            android:id="@+id/developed_by_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developed_by_link"
            tools:layout_editor_absoluteY="515dp"
            tools:layout_editor_absoluteX="161dp"
            app:layout_constraintStart_toStartOf="@+id/developed_by_text"
            android:layout_marginLeft="11dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="35dp"
            />

    <TextView
            android:id="@+id/address_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="197dp"
            tools:layout_editor_absoluteX="98dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="197dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/phone_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_1"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="273dp"
            tools:layout_editor_absoluteX="118dp"
            app:layout_constraintStart_toStartOf="@+id/address_city"
            android:layout_marginTop="54dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toBottomOf="@+id/address_city"
            android:autoLink="phone"
            android:textAllCaps="true"
            android:textIsSelectable="false"/>

    <TextView
            android:id="@+id/phone_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_2"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="318dp"
            tools:layout_editor_absoluteX="118dp"
            app:layout_constraintStart_toStartOf="@+id/phone_1"
            android:layout_marginTop="23dp"
            app:layout_constraintTop_toBottomOf="@+id/phone_1"
            android:autoLink="phone"
            android:textAllCaps="true"
            android:textIsSelectable="false"/>

</android.support.constraint.ConstraintLayout>
